fix: fix scrollbar height during login

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,5 +1,5 @@
 .app {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   overflow: hidden;
   background-color: rgba(65, 82, 46, 0.05);
